@@ -2,54 +2,43 @@ package com.jaoafa.jdavcspeaker.Lib;
 
 import org.json.JSONObject;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.*;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 public class LibAlias {
+    private static final LibFlow aliasFlow = new LibFlow("LibAlias");
     private static final Map<String, String> aliases = new HashMap<>();
 
     public static void fetchMap() {
-        LibFlow aliasFlow = new LibFlow("LibAlias");
-        File aliasConfig = new File("./alias.json");
-        //存在しない場合に作成
-        if (!aliasConfig.exists()) {
-            try {
-                Files.write(Paths.get("alias.json"), Collections.singleton(new JSONObject().toString()));
-                aliasFlow.success("alias.json ファイルの作成に成功しました。");
-            } catch (IOException e) {
-                aliasFlow.error("alias.json ファイルの作成に失敗しました。");
-                e.printStackTrace();
+        if (!LibFiles.VFile.ALIAS.exists()) {
+            boolean bool = LibFiles.VFile.ALIAS.write(new JSONObject());
+            if (bool) {
+                aliasFlow.success("エイリアスファイルの作成に成功しました。");
+            } else {
+                aliasFlow.error("エイリアスファイルの作成に失敗しました。");
             }
         }
 
         aliases.clear();
-        try {
-            JSONObject obj = new JSONObject(Files.readString(Paths.get("alias.json")));
+        JSONObject obj = LibFiles.VFile.ALIAS.readJSONObject(new JSONObject());
 
-            for (Iterator<String> it = obj.keys(); it.hasNext(); ) {
-                String key = it.next();
-                aliases.put(key, obj.getString(key));
-            }
-            aliasFlow.success("エイリアス設定を " + aliases.size() + " 件ロードしました。");
-        } catch (IOException e) {
-            aliasFlow.error("エイリアス設定のロード中にエラーが発生しました。");
-            e.printStackTrace();
+        for (Iterator<String> it = obj.keys(); it.hasNext(); ) {
+            String key = it.next();
+            aliases.put(key, obj.getString(key));
         }
+        aliasFlow.success("エイリアス設定を " + aliases.size() + " 件ロードしました。");
     }
 
     public static void fetchJson() {
         JSONObject obj = new JSONObject();
         aliases.forEach(obj::put);
-        try {
-            Files.write(Paths.get("alias.json"), Collections.singleton(obj.toString()));
-        } catch (IOException e) {
-            e.printStackTrace();
+        boolean bool = LibFiles.VFile.ALIAS.write(obj);
+        if (!bool) {
+            aliasFlow.error("エイリアスファイルの書き込みに失敗しました。");
         }
     }
 
@@ -76,7 +65,7 @@ public class LibAlias {
             .entrySet()
             .stream()
             .sorted(Comparator.<Map.Entry<String, String>>comparingInt(e -> e.getKey().length()).reversed())
-            .collect(Collectors.toList())) {
+            .toList()) {
             Pattern pattern = Pattern.compile(entry.getKey());
             Matcher matcher = pattern.matcher(text);
             while (matcher.find()) {
