@@ -13,10 +13,9 @@ import org.apache.commons.codec.digest.DigestUtils;
 import org.json.JSONException;
 
 import javax.annotation.CheckReturnValue;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -321,10 +320,13 @@ public class VoiceText {
             emotionLevel != null ? emotionLevel.name() : "null",
             pitch));
 
-        if (new File("./Temp/" + hash + ".mp3").exists()) {
+        if (LibFiles.VDirectory.VOICETEXT_CACHES.exists(Path.of("%s.mp3".formatted(hash)))) {
             filteringQueue(speakFromType, message);
             TrackInfo info = new TrackInfo(speakFromType, message);
-            PlayerManager.getINSTANCE().loadAndPlay(info, "./Temp/" + hash + ".mp3");
+            PlayerManager.getINSTANCE().loadAndPlay(
+                info,
+                LibFiles.VDirectory.VOICETEXT_CACHES.resolve(Path.of("%s.mp3".formatted(hash))).toString()
+            );
             return;
         }
 
@@ -363,7 +365,7 @@ public class VoiceText {
                     return;
                 }
                 System.setProperty("file.encoding", "UTF-8");
-                Files.write(Paths.get("./Temp/" + hash + ".mp3"), body.bytes());
+                Files.write(LibFiles.VDirectory.VOICETEXT_CACHES.resolve(Path.of(hash)), body.bytes());
             } catch (IOException e) {
                 e.printStackTrace();
                 return;
@@ -373,7 +375,7 @@ public class VoiceText {
                 .queue(null, Throwable::printStackTrace);
             filteringQueue(speakFromType, message);
             TrackInfo info = new TrackInfo(speakFromType, message);
-            PlayerManager.getINSTANCE().loadAndPlay(info, "./Temp/" + hash + ".mp3");
+            PlayerManager.getINSTANCE().loadAndPlay(info, LibFiles.VDirectory.VOICETEXT_CACHES.resolve(Path.of(hash)).toString());
         } catch (JSONException e) {
             e.printStackTrace();
         }
